--- a/views/config_booking.erb
+++ b/views/config_booking.erb
@@ -2,10 +2,17 @@
 <div data-alerts="alerts" data-titles="{'success':'<%=t.entitymanagement.success%>','warning':'<%=t.entitymanagement.warning%>','error':'<%=t.entitymanagement.error%>'}" data-fade="10000"></div>
 <form name="variables" action="/variables" method="PUT" 
       data-remote="ajax" data-remote-method="PUT">
-  <%= render_variable_input_text('booking.deposit', t.booking_settings.form.deposit, 2, 2) %>
-  <%= render_variable_input_text('booking.min_days', t.booking_settings.form.min_days, 2, 2) %>  
+
+  <h3><%=t.booking_settings.form.general_group%></h3>
   <%= render_variable_select('booking.item_family', t.booking_settings.form.family, families) %>
+  <%= render_variable_input_text('booking.min_days', t.booking_settings.form.min_days, 2, 2) %>  
   <%= render_variable_textarea('booking.notification_email', t.booking_settings.form.notification_email) %>
+  <%= render_variable_checkbox_boolean('booking.allow_custom_pickup_return_place', t.booking_settings.form.custom_pickup_return_place) %>
+  
+  <h3><%=t.booking_settings.form.payment_group%></h3>
+  <%= render_variable_input_text('booking.deposit', t.booking_settings.form.deposit, 2, 2) %>
+  <%= render_variable_checkbox_boolean('booking.payment', t.booking_settings.form.payment) %>
+  
   <div class="formrow-botonera">
   	<input type="submit" value="<%=t.entitymanagement.update%>" 
   	       class="button blue-button">
