--- a/views/_booking_selector_inline.erb
+++ b/views/_booking_selector_inline.erb
@@ -123,5 +123,5 @@
 		  </form>
     </div>
 
-<%= partial(:booking_selector_js, :locals => {:booking_min_days => booking_min_days, :booking_item_family => booking_item_family, :booking_item_type => booking_item_type, :booking_js => booking_js})%>
+<%= partial(:booking_selector_js, :locals => {:booking_min_days => booking_min_days, :booking_item_family => booking_item_family, :booking_item_type => booking_item_type, :booking_js => booking_js, :booking_allow_custom_pickup_return_place => booking_allow_custom_pickup_return_place})%>
 
