--- a/views/_booking_selector.erb
+++ b/views/_booking_selector.erb
@@ -49,7 +49,7 @@
           <% if booking_item_family.pickup_return_place %>
           <div class="formrow">
                 <div class="collection_place">
-                   <label for="pickup_place" class="fieldtitle columna1"><%=t.new_booking.place%> * </label>
+                   <label for="pickup_place" class="fieldtitle columna1"><%=t.new_booking.pickup_place%></label>
                    <select name="pickup_place" class="fieldcontrol" id="pickup_place">
                    </select>
                 </div>
@@ -140,7 +140,7 @@
           <% if booking_item_family.pickup_return_place %>
           <div class="formrow">
                  <div class="return_place">
-                    <label for="return_place" class="fieldtitle columna1"><%=t.new_booking.place%></label>
+                    <label for="return_place" class="fieldtitle columna1"><%=t.new_booking.return_place%></label>
                     <select name="return_place" id="return_place" class="fieldcontrol">
                     </select>
                    </div>
