categories and items management

--- a/views/console_booking.erb
+++ b/views/console_booking.erb
@@ -33,7 +33,7 @@
   </div>  
   <div class="grid_3">
     <div class="box box-shadow guiblock background-color-2" style="padding: 3em">
-      <p class="centered_text"><a href="/config/booking"><%=t.booking_console.rates%></a></p>
+      <p class="centered_text"><a href="/admin/bookings/rates"><%=t.booking_console.rates%></a></p>
     </div>
   </div>
   <div class="grid_3">
