--- a/views/_booking_selector.erb
+++ b/views/_booking_selector.erb
@@ -1,5 +1,7 @@
 	  <div id="highlight_block">
 		  <form id="form-search-item" name="form-search-item" action="/p/booking/start">
+        <div class="container_12">
+          <div class="grid_4">
 		      <div class="formrow">
 		      	<label for="datefrom" id="labeldatefrom" class="fieldtitle">
               <%=(booking_item_family.start_date_literal==:arrival)?(t.new_booking.arrival_date):(t.new_booking.pickup_date)%>
@@ -59,7 +61,9 @@
                 </div>
                 <input type="hidden" name="pickup_place_value" id="pickup_place_value"/>
           </div>                      
-          <% end %>             
+          <% end %>    
+          </div>
+          <div class="grid_4">         
 		      <div class="formrow">
 		      	<label for="dateto" id="labeldateto" class="fieldtitle">
               <%=(booking_item_family.start_date_literal==:arrival)?(t.new_booking.departure_date):(t.new_booking.return_date)%>
@@ -151,10 +155,19 @@
                  <input type="hidden" name="return_place_value" id="return_place_value"/>
           </div>
           <% end %>
-
-		      <div class="formrow">
-	        	<input type="submit" value="<%=t.new_booking.search%>" id="button_calcular_tarifas" class="botones"/>
-		      </div>    
+          </div>
+          <div class="grid_4">
+            <div class="formrow">
+              <% if booking_item_family.pickup_return_place %>  
+              <div class="top-margin-2lines">
+              <% else %>
+              <div class="top-margin">
+              <% end %> 
+                <input type="submit" value="<%=t.new_booking.search%>" id="button_calcular_tarifas" class="botones"/>
+              </div>
+            </div>    
+          </div>
+        </div>  
 		  </form>
     </div>
 
