--- a/views/reserva-finalizada.erb
+++ b/views/reserva-finalizada.erb
@@ -1,7 +1,7 @@
  <div class="container_12">
    <div class="grid_8">
      <div class="highlight_block top-margin">
-       <%= partial(:reserva, :locals => {:booking => booking}) %>  
+       <%= partial(:reserva, :locals => {:booking => booking, :message => ''}) %>  
      </div>
    </div>
    <div class="grid_4 top-margin">
