--- a/views/reserva-online.erb
+++ b/views/reserva-online.erb
@@ -22,12 +22,6 @@
               	  	<%=t.new_booking.complete_booking%>
               	  </a>
               </li>
-              <li>
-              	  <a id="tab-payment" href="#" class="tab img_txt">
-              	  	<span>4</span>
-              	  	<%=t.new_booking.payment%>
-              	  </a>
-              </li>
             </ul>
           </div>
         </div>      
@@ -447,8 +441,20 @@
 	          </div>        
 	        </fieldset>	      
 	        <fieldset id="fs_confirm">
-	      	    <input type="button" value="<%=t.new_booking.continue%>" id="button_ir_a_pagar_reserva" class="form-button botones" style="display:none"/>
-	            <input type="submit" value="<%=t.new_booking.confirm%>" id="button_confirmar_reserva" class="form-button botones" style="display:none"/>
+	        	<div style="text-align:center">
+	        	  <div style="display:inline-block">
+	      	        <button type="submit" id="button_ir_a_pagar_reserva" class="form-button botones" style="display:none">
+                      <span><%=t.new_booking.go_to_pay_line1%></span><br/>
+                      <span><%=t.new_booking.go_to_pay_line2%></span><br/>
+	      	        </button>
+	              </div>
+	        	  <div style="display:inline-block">	            
+	                <button type="submit" id="button_confirmar_reserva" class="form-button botones" style="display:none">
+                       <span><%=t.new_booking.confirm_line1%></span><br/>
+                       <span><%=t.new_booking.confirm_line2%></span>
+	                </button>
+	              </div>
+	            </div>
 	        </fieldset>
 	        <div id="reservation_error">
 	        </div>	
@@ -457,50 +463,6 @@
           <input type="hidden" name="booking[source]" id="booking[source]"/>
 
 	    </form>
-
-        <!-- PAYMENT TAB -->
-
-        <div id="booking-payment" style="display:none">
-
-          <div id="booking_summary">
-          </div>
-        
-          <h3 class="guiblock-title"><%=t.booking.payment.label%></h3>
-          <form name="form-payment" id="form-payment">
-            <% if booking_deposit > 0 %>
-              <div class="radio-block">
-                <input type="radio" name="booking[payment]" value="total" checked="true"><%=t.booking.payment_type.total.label%></input>
-                <p id="payment_total" class="radio-info less_contrast_text"></p>
-              </div>
-              <div class="radio-block">
-                <input type="radio" name="booking[payment]" value="deposit"><%=t.booking.payment_type.deposit.label%></input>
-                <p id="payment_deposit" class="radio-info less_contrast_text"></p>
-              </div>
-            <% else %>
-              <input type="hidden" name="booking[payment]" value="total"/>          
-            <% end %> 	
-
-            <div id="payment_methods">
-               <h4 class="top-margin bottom-margin"><%=t.new_booking.payment_methods%></h4>
-               <div id="payment_methods_selector"></div>
-            </div>
-
-	        <div class="content_data_box top-margin-2lines bottom-margin-1line">
-	          <fieldset>
-               <input id="button_confirmar_reserva" type="submit" class="form-button botones" value="<%=t.new_booking.pay%>"/>
-	          </fieldset>
-	        </div>
-
-	        <div id="payment_error">
-	        </div>	          
-          </form>
-
-        </div>
-
-        <!-- BOOKING COMPLETE -->
-	    <div id="booking-complete-message">
-
-	    </div>
 
         <!-- overlayed element -->
         <div class="apple_overlay" id="overlay">
@@ -583,17 +545,3 @@
   
   </script>
   
-  <script type="text/tpml" id="script_booking_summary">
-
-      <p class="content_data_box all-full-space box-shadow background-color-highlight-2" 
-         style="text-align: center; margin-left:auto; margin-right: auto; display: table">
-         <%=t.new_booking.confirm_message%>
-      </p>
-
-  </script>
-
-  <script type="text/tpml" id="script_booking_finished">
-	  <% if defined?(booking_summary_message) %>
-	   <%= booking_summary_message %>
-	  <% end %>
-  </script>
