--- a/views/reserva.erb
+++ b/views/reserva.erb
@@ -1,14 +1,14 @@
  <div class="container_12">
    <div class="grid_8">
    	 <div class="highlight_block top-margin">
-       <%= partial(:reserva, :locals => {:booking => booking}) %>  
+       <%= partial(:reserva, :locals => {:booking => booking, :message => ""}) %>  
      </div>
    </div>
    <div class="grid_4 top-margin">
      <%= partial(:booking_price, :locals => {:booking => booking}) %>  
    </div>
  </div>
- <% if booking.total_pending > 0 %>
+ <% if booking_payment and booking.total_pending > 0 %>
  <div class="container_12">
    <div class="grid_12">
    	  <%= partial(:booking_payment, :locals => {:booking => booking, :booking_deposit => booking_deposit, :booking_payment => booking_payment}) %>
